packages/config/tailwind-config/tailwind.css
@import "tailwindcss";
@config "./tailwind.config.ts";

/********************************************************************
 * light theme variables
 ********************************************************************/
:root {
  /* info color palette */
  --theme-info: var(--theme-info-500);
  --theme-info-foreground: 0 0% 100%;     /** #ffffff */
  --theme-info-50: 213 92% 95%;           /** #e6f1fe */
  --theme-info-100: 212 92% 90%;          /** #cce3fd */
  --theme-info-200: 212 92% 79%;          /** #99c7fb */
  --theme-info-300: 212 92% 69%;          /** #66aaf9 */
  --theme-info-400: 212 92% 58%;          /** #338ef7 */
  --theme-info-500: 212 100% 47%;         /** #006FEE */
  --theme-info-600: 212 100% 38%;         /** #005bc4 */
  --theme-info-700: 212 100% 29%;         /** #004493 */
  --theme-info-800: 212 100% 19%;         /** #002e62 */
  --theme-info-900: 212 100% 10%;         /** #001731 */
}

/********************************************************************
 * dark theme variables
 ********************************************************************/
:root[data-theme="dark"] {
  /* info color palette dark */
  --theme-info: var(--theme-info-400);
  --theme-info-foreground: 0, 0%, 100%;   /** #ffffff */
  --theme-info-50: 212 100%, 10%;         /** #001731 */
  --theme-info-100: 212 100% 19%;         /** #002e62 */
  --theme-info-200: 212 100% 29%;         /** #004493 */
  --theme-info-300: 212 100% 38%;         /** #005bc4 */
  --theme-info-400: 212 100% 47%;         /** #006FEE */
  --theme-info-500: 212 92% 58%;          /** #338ef7 */
  --theme-info-600: 212 92% 69%;          /** #66aaf9 */
  --theme-info-700: 212 92% 79%;          /** #99c7fb */
  --theme-info-800: 212 92% 90%;          /** #cce3fd */
  --theme-info-900: 213 92% 95%;          /** #e6f1fe */
}

